:rocket: Add docker
Signed-off-by: Emil <amionv99@gmail.com>

--- a/parking/pom.xml
+++ b/parking/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>parking</artifactId>
     <version>0.1-kappa</version>
     <name>parking</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
