--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 os: linux
 dist: trusty
 
-language: java
+language: shell
 
 branches:
   only:
@@ -13,11 +13,12 @@ before_script:
   - export TAG=travis
   - export VCS_REF=`git rev-parse --short HEAD`
   - export BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
-  - export IMAGE_NAME=__app_slug__
+  - export IMAGE_NAME=springbootapp
 
 script:
   # Build project
-  - echo "[TODO] Test that your project builds properly"
+  - docker-compose -f docker-compose.yml ps
+  - travis_retry travis_wait 60 docker-compose -f docker-compose.${DATABASE}.yml build
   # Execute project Unit Tests
   - echo "[TODO] Test that your project Unit Tests execute properly"
   # Run project
