--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_script:
 
 script:
   # Build project
+  - docker-compose -f /.travis/docker-compose.yml ps
+  - travis_retry travis_wait 60 docker-compose -f /.travis/docker-compose.${DATABASE}.yml build
   # Execute project Unit Tests
   - echo "[TODO] Test that your project Unit Tests execute properly"
   # Run project
