--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 script:
   # Build project
-  - docker-compose -f /.travis/docker-compose.yml ps
+  - docker-compose -f docker-compose.yml ps
   - travis_retry travis_wait 60 docker-compose docker-compose.yml build
   - docker images
   # Execute project Unit Tests
