--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ branches:
   only:
     - master
     - develop
-    - conf/docker_configuration
 
 before_script:
   - env | sort
@@ -22,6 +21,7 @@ script:
   # - docker-compose -f .travis/docker-compose.yml ps
   - docker images
   - docker-compose -f .travis/docker-compose.yml logs springbootapp
+  - docker logs springbootapp
   # Execute project Unit Tests
   - echo "[TODO] Test that your project Unit Tests execute properly"
   # Run project
