:construction: Test CI v12
Signed-off-by: Emil <amionv99@gmail.com>

--- a/parking/Dockerfile
+++ b/parking/Dockerfile
@@ -3,5 +3,5 @@ VOLUME /tmp
 EXPOSE 8082
 RUN mkdir -p /app/
 RUN mkdir -p /app/logs/
-ADD target/parking-0.1-kappa.jar /app/app.jar
+ADD target/*.jar /app/app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dspring.profiles.active=container", "-jar", "/app/app.jar"]
