--- a/parking/.travis.yml
+++ b/parking/.travis.yml
@@ -9,14 +9,14 @@ branches:
     - develop
 
 before_install:
-  name="springbootapp"
+  container_name="springbootapp"
   image="springbootapp"
 
 install:
-  - mvn clean install dockerfile:build -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn clean install
   - chmod 755 docker-entrypoint.sh
   - docker build --build-arg=target/*.jar -t "$image" "$dir"
-  - docker run --name "$name" -d "$image" "$dir" -eDB_PLATFORM=h2 -eAPP_VERIFIER_KEY_PASS=averysecretpasswordforjks
+  - docker run --name container_name
   - docker logs "$name"
   - docker logs "$name" | grep "Launching application..."
   - docker stop "$name"
