--- a/parking/.travis/docker-compose.yml
+++ b/parking/.travis/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3"
 services:
-#  backend_db:
-#    image: postgres:10-alpine
-#    container_name: backend_db
-#    ports:
-#      - "5432:5432"
-#    volumes:
-#      - /srv/spring_rest_api_starter/db/data:/var/lib/postgresql/data
-#      - /etc/localtime:/etc/localtime:ro
-#      - /etc/timezone:/etc/timezone:ro
-#    environment:
-#      - POSTGRES_DB=postgres
-#      - POSTGRES_USER=postgres
-#      - POSTGRES_PASSWORD=megavova
+  backend_db:
+    image: postgres:10-alpine
+    container_name: backend_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - /srv/spring_rest_api_starter/db/data:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=my_user
+      - POSTGRES_PASSWORD=megavova
   springbootapp:
     build:
       context: .
