--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
   - cd "$dir"
   - travis_retry travis_wait 30 docker-compose -f docker-compose.yml build
   - docker images
+  - docker-compose -f docker-compose.yml ps
 #  - mvn test verify -P all-tests
 
 notifications:
