:whale: Add db configuration v2
Signed-off-by: Emil <amionv99@gmail.com>

--- a/parking/.travis/docker-compose.yml
+++ b/parking/.travis/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3"
 services:
   backend_db:
+    build:
+      context: .
+      dockerfile: db.Dockerfile
     image: postgres:10-alpine
     restart: always
     container_name: backend_db
-    dockerfile: db.Dockerfile
     ports:
       - "5432"
     volumes:
