--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
   - export IMAGE_NAME=springbootapp
   - dir=".travis"
   - export APP_FOLDER_NAME=parking
+  - sudo -u postgres psql -c 'CREATE DATABASE postgres; CREATE ROLE my_user; GRANT ALL PRIVILEGES ON DATABASE postgres on my_user'
 
 script:
   - cd "$APP_FOLDER_NAME"
