--- a/parking/pom.xml
+++ b/parking/pom.xml
@@ -57,6 +57,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
