--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - export IMAGE_NAME=springbootapp
   - dir=".travis"
   - export APP_FOLDER_NAME=parking
-  - sudo -u postgres psql -c 'CREATE ROLE my_user;'
+  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN;'
   - sudo -u postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE postgres to my_user;'
 
 script:
