:whale: Remove .travis
Signed-off-by: Emil <amionv99@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,15 @@ branches:
     - develop
 
 
+services: postgresql
+
 before_script:
   - env | sort
   - export TAG=travis
   - export BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
   - export IMAGE_NAME=springbootapp
-  - dir=".travis"
   - export APP_FOLDER_NAME=parking
-  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN;'
+  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN PASSWORD megavova;'
   - sudo -u postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE postgres to my_user;'
 
 script:
