--- a/.travis.yml
+++ b/.travis.yml
@@ -7,26 +7,26 @@ branches:
   only:
     - master
     - develop
-    - /.*/
 
-
-services: postgresql
 
 before_script:
   - env | sort
   - export TAG=travis
   - export BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
   - export IMAGE_NAME=springbootapp
+  - dir=".travis"
   - export APP_FOLDER_NAME=parking
-  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN PASSWORD megavova;'
+  - sudo -u postgres psql -c 'CREATE ROLE my_user;'
   - sudo -u postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE postgres to my_user;'
 
 script:
   - cd "$APP_FOLDER_NAME"
+  - cd "$dir"
   - travis_retry travis_wait 30 docker-compose -f docker-compose.yml build
   - cd ..
   - mvn clean install
   - docker images
+  - cd "$dir"
   - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
   - docker-compose -f docker-compose.yml ps
 #  - mvn test verify -P all-tests
