--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - export BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
   - export IMAGE_NAME=springbootapp
   - export APP_FOLDER_NAME=parking
-  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN PASSWORD megavova;'
+  - sudo -u postgres psql -c 'CREATE ROLE my_user WITH LOGIN PASSWORD 'megavova';'
   - sudo -u postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE postgres to my_user;'
 
 script:
