--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
   - docker-compose -f docker-compose.yml ps
   - travis_retry travis_wait 30 docker-compose -f docker-compose.yml logs springbootapp
-  - netstat -aln | grep LISTEN
+  - travis_retry travis_wait 30 netstat -aln | grep LISTEN
 #  - mvn test verify -P all-tests
 
 notifications:
