--- a/parking/src/main/resources/application.properties
+++ b/parking/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=my_user
 spring.datasource.password=megavova
 spring.datasource.driver-class-name=org.postgresql.Driver
