--- a/parking/docker-compose.yml
+++ b/parking/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     restart: always
     container_name: backend_db
     environment:
-      POSTGRES_PASSWORD: megavova
-      POSTGRES_USER: my_user
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
@@ -21,7 +21,7 @@ services:
       dockerfile: Dockerfile
     container_name: springbootapp
     ports:
-    - 8000
+    - "8080:8080"
     volumes:
       - /srv/private_parking_reservation/back/logs:/srv/app/logs
       - /srv/private_parking_reservation/back/keys:/srv/app/keys
