:wrench: Update enum of branches
Signed-off-by: Emil <amionv99@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ dist: trusty
 
 language: java
 
+services: docker
+
 branches:
   only:
-    - master
-    - develop
+  - gh-pages
+  - /.*/
 
 
-services: postgresql
 
 before_script:
   - env | sort
