--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ services: docker
 
 branches:
   only:
-  - gh-pages
-  - /.*/
+  - master
+  - develop
 
 
 
@@ -28,7 +28,7 @@ script:
   - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
   - docker-compose -f docker-compose.yml ps
   - travis_retry travis_wait 30 docker-compose -f docker-compose.yml logs springbootapp
-#  - mvn test verify -P all-tests
+  # - mvn test verify -P all-tests
 
 notifications:
   email: false
