--- a/parking/docker-compose.yml
+++ b/parking/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     restart: always
     container_name: backend_db
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: my_user
+      POSTGRES_PASSWORD: megavova
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     volumes:
