:wrench: Dmitriy Barskov I love you
Signed-off-by: Emil <amionv99@gmail.com>

--- a/parking/Dockerfile
+++ b/parking/Dockerfile
@@ -1,26 +1,6 @@
-FROM openjdk:8-jre-alpine
-
-# Expected JAR file path as argument
-RUN set -ex; \
-	mkdir -p /srv/app; \
-	chmod 755 /srv/app; \
-	mkdir -p /srv/app/data; \
-	mkdir -p /srv/app/logs; \
-	mkdir -p /srv/app/keys; \
-	mkdir -p /srv/app/config; \
-	# install dependencies
-#	apk add --update \
-#		openssh-keygen \
-#		openssl \
-#	; \
-	rm -rf /var/cache/apk/*
-
-VOLUME /srv/app/config /srv/app/keys /srv/app/logs /srv/app/data
-
-WORKDIR /srv/app/
-EXPOSE 8080 8443
-
-COPY target/parking-0.1-kappa.jar /srv/app/app.jar
-
-
-ENTRYPOINT ["java", "-Dspring.profiles.active=production", "-jar", "app.jar"]
+FROM maven:3.6.1-jdk-8-alpine
+RUN mkdir /app
+WORKDIR /app
+COPY . /app
+EXPOSE 8080
+CMD ["mvn", "clean", "install", "spring-boot:repackage", "spring-boot:run"]
