--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,9 @@ before_script:
 
 script:
   - cd "$APP_FOLDER_NAME"
-  - travis_retry travis_wait 30 docker-compose -f docker-compose.yml build
+  - docker-compose docker-compose build
   - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
   - docker-compose -f docker-compose.yml ps
-  - travis_retry travis_wait 30 docker-compose -f docker-compose.yml logs springbootapp
   # - mvn test verify -P all-tests
 
 notifications:
