:wrench: Remove single building of springbootapp container
Signed-off-by: Emil <amionv99@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ before_script:
 
 script:
   - cd "$APP_FOLDER_NAME"
-  - docker-compose docker-compose build
-  - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
+  - docker-compose -f docker-compose.yml up -d --build && sleep 60
   - docker-compose -f docker-compose.yml ps
   # - mvn test verify -P all-tests
 
