--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - cd "$APP_FOLDER_NAME"
-  - docker-compose -f docker-compose.yml up -d --build && sleep 60
+  - docker-compose -f docker-compose.yml up --build && sleep 60
   - docker-compose -f docker-compose.yml ps
   # - mvn test verify -P all-tests
 
