--- a/parking/docker-compose.yml
+++ b/parking/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   postgres:
     image: postgres:10
     restart: always
-    container_name: backend_db
+    container_name: postgres
     environment:
       POSTGRES_USER: my_user
       POSTGRES_PASSWORD: megavova
