--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ script:
   - sudo service postgresql stop
   - cd "$APP_FOLDER_NAME"
   - docker-compose -f docker-compose.yml up -d --build && sleep 60
-  - docker-compose -f docker-compose.yml ps "springbootapp" | grep "Up"
+  - docker-compose -f docker-compose.yml ps
   - docker-compose -f docker-compose.yml ps "springbootapp" | grep "Up" || exit 1
+  - docker-compose -f docker-compose.yml ps "postgres" | grep "Up" || exit 1
   # - mvn test verify -P all-tests
 
 notifications:
