🔧 Fix/connection db error (#7)
* :wrench: Add all variables inside .env

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Update enum of branches

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Remove env file

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Dmitriy Barskov I love you

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Siplify travis script

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Remove single building of springbootapp container

Signed-off-by: Emil <amionv99@gmail.com>

* :construction: Remove another session for debugging

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Add stoping of postgres

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Add exit 0 construction

Signed-off-by: Emil <amionv99@gmail.com>

* :wrench: Add grep for all services

Signed-off-by: Emil <amionv99@gmail.com>

* :loud_sound: Add logs for services

Signed-off-by: Emil <amionv99@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ dist: trusty
 
 language: java
 
+services: docker
+
 branches:
   only:
-    - master
-    - develop
+  - master
+  - develop
 
 
-services: postgresql
 
 before_script:
   - env | sort
@@ -21,13 +22,15 @@ before_script:
   - sudo -u postgres psql -c 'GRANT ALL PRIVILEGES ON DATABASE postgres to my_user;'
 
 script:
+  - sudo service postgresql stop
   - cd "$APP_FOLDER_NAME"
-  - mvn clean install
-  - travis_retry travis_wait 30 docker-compose -f docker-compose.yml build
-  - travis_retry docker-compose -f docker-compose.yml up -d && sleep 60
+  - docker-compose -f docker-compose.yml up -d --build && sleep 60
   - docker-compose -f docker-compose.yml ps
-  - travis_retry travis_wait 30 docker-compose -f docker-compose.yml logs springbootapp
-#  - mvn test verify -P all-tests
+  - docker-compose -f docker-compose.yml logs "springbootapp"
+  - docker-compose -f docker-compose.yml logs "postgres"
+  - docker-compose -f docker-compose.yml ps "springbootapp" | grep "Up" || exit 1
+  - docker-compose -f docker-compose.yml ps "postgres" | grep "Up" || exit 1
+  # - mvn test verify -P all-tests
 
 notifications:
   email: false
