--- a/parking/src/main/resources/application.properties
+++ b/parking/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
-spring.datasource.username=my_user
-spring.datasource.password=megavova
+spring.datasource.url=jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=postgres
+spring.datasource.password=logistic
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+
